Bump nexus pin (#506)
* Update nexus pin

* Update generated types

* Bump packer version
