# libs/api/__generated__/models/RouterRouteCreateParams.ts
@@ -1,0 +1,95 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Oxide Region API
+ * API for interacting with the Oxide control plane
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: api@oxide.computer
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+import {
+  RouteDestination,
+  RouteDestinationFromJSON,
+  RouteDestinationFromJSONTyped,
+  RouteDestinationToJSON,
+  RouteTarget,
+  RouteTargetFromJSON,
+  RouteTargetFromJSONTyped,
+  RouteTargetToJSON,
+} from './'
+
+/**
+ * Create-time parameters for a [`RouterRoute`]
+ * @export
+ * @interface RouterRouteCreateParams
+ */
+export interface RouterRouteCreateParams {
+  /**
+   *
+   * @type {string}
+   * @memberof RouterRouteCreateParams
+   */
+  description: string
+  /**
+   *
+   * @type {RouteDestination}
+   * @memberof RouterRouteCreateParams
+   */
+  destination: RouteDestination
+  /**
+   * Names must begin with a lower case ASCII letter, be composed exclusively of lowercase ASCII, uppercase ASCII, numbers, and '-', and may not end with a '-'.
+   * @type {string}
+   * @memberof RouterRouteCreateParams
+   */
+  name: string
+  /**
+   *
+   * @type {RouteTarget}
+   * @memberof RouterRouteCreateParams
+   */
+  target: RouteTarget
+}
+
+export function RouterRouteCreateParamsFromJSON(
+  json: any
+): RouterRouteCreateParams {
+  return RouterRouteCreateParamsFromJSONTyped(json, false)
+}
+
+export function RouterRouteCreateParamsFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): RouterRouteCreateParams {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    description: json['description'],
+    destination: RouteDestinationFromJSON(json['destination']),
+    name: json['name'],
+    target: RouteTargetFromJSON(json['target']),
+  }
+}
+
+export function RouterRouteCreateParamsToJSON(
+  value?: RouterRouteCreateParams | null
+): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    description: value.description,
+    destination: RouteDestinationToJSON(value.destination),
+    name: value.name,
+    target: RouteTargetToJSON(value.target),
+  }
+}
