# libs/api/__generated__/models/RouterRouteKind.ts
@@ -1,0 +1,42 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Oxide Region API
+ * API for interacting with the Oxide control plane
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: api@oxide.computer
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ * The classification of a [`RouterRoute`] as defined by the system. The kind determines certain attributes such as if the route is modifiable and describes how or where the route was created.
+ *
+ * See [RFD-21](https://rfd.shared.oxide.computer/rfd/0021#concept-router) for more context
+ * @export
+ * @enum {string}
+ */
+export enum RouterRouteKind {
+  Default = 'Default',
+  VpcSubnet = 'VpcSubnet',
+  VpcPeering = 'VpcPeering',
+  Custom = 'Custom',
+}
+
+export function RouterRouteKindFromJSON(json: any): RouterRouteKind {
+  return RouterRouteKindFromJSONTyped(json, false)
+}
+
+export function RouterRouteKindFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): RouterRouteKind {
+  return json as RouterRouteKind
+}
+
+export function RouterRouteKindToJSON(value?: RouterRouteKind | null): any {
+  return value as any
+}
