# libs/api/__generated__/models/RouterRouteResultsPage.ts
@@ -1,0 +1,75 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Oxide Region API
+ * API for interacting with the Oxide control plane
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: api@oxide.computer
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+import {
+  RouterRoute,
+  RouterRouteFromJSON,
+  RouterRouteFromJSONTyped,
+  RouterRouteToJSON,
+} from './'
+
+/**
+ * A single page of results
+ * @export
+ * @interface RouterRouteResultsPage
+ */
+export interface RouterRouteResultsPage {
+  /**
+   * list of items on this page of results
+   * @type {Array<RouterRoute>}
+   * @memberof RouterRouteResultsPage
+   */
+  items: Array<RouterRoute>
+  /**
+   * token used to fetch the next page of results (if any)
+   * @type {string}
+   * @memberof RouterRouteResultsPage
+   */
+  nextPage?: string | null
+}
+
+export function RouterRouteResultsPageFromJSON(
+  json: any
+): RouterRouteResultsPage {
+  return RouterRouteResultsPageFromJSONTyped(json, false)
+}
+
+export function RouterRouteResultsPageFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): RouterRouteResultsPage {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    items: (json['items'] as Array<any>).map(RouterRouteFromJSON),
+    nextPage: !exists(json, 'next_page') ? undefined : json['next_page'],
+  }
+}
+
+export function RouterRouteResultsPageToJSON(
+  value?: RouterRouteResultsPage | null
+): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    items: (value.items as Array<any>).map(RouterRouteToJSON),
+    next_page: value.nextPage,
+  }
+}
